.htaccess: better https redirect

--- a/static/root/.htaccess
+++ b/static/root/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 
 # require https
 RewriteCond %{HTTPS} !=on
-RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
 
 <IfModule mod_headers.c>
